# cnc-iot-backend

./: .gitignore  Makefile  README.md  datos.csv  docker-compose.yml  humedad-fixes.patch
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  vagrant_cwd
Deploy/: .env.example  ENVIROMENT.MD  deploy.ps1  down.ps1
Deploy/Segunda_Entrega/: cloud-init.txt  deploy.ps1  deploy.sh  down.ps1  fase4.ps1  provision-back.sh  provision-front.sh
Esp32/: cnc_iot_esp32.ino  credentials.h
Esp32/cnc_iot_esp32/: cnc_iot_esp32.ino  credentials.h
app/schemas/: lectura.py
backend/: Dockerfile  cnc_backend.service  pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: __init__.py  alertas.py  datos.py
backend/tests/: test_datos.py
backend/tools/: sender.py  sender_mqtt.py
bridge/: mqtt_bridge.py  mqtt_bridge.service  pyproject.toml
frontend/app/: page.tsx
frontend/app/components/: CameraStream.tsx
frontend/app/hooks/: useDatos.ts
